	* configs/stm3vldiscovery: Support for the STM32VL-Discovery board.
	  Contributed by Alan Carvalho de Assis (2014-1-12).
	* net/net_close.c, net/Kconfig, include/nuttx/net/net.h, and
	  include/sys/socket.h: Add support for the SO_LINGER socket option.
	  Extended from logic provided by Jason Jiang.  Enabled with
	  CONFIG_NET_SOLINGER.  At this point, it has only been verified that
	  the changes does not seem to do any harm (2014-1-13).
	* net/connect.c and net/uip/uip_callback.c: prevent tcp_connect
	  callback from being double freed.  From Max Holtzberg (2014-1-13).
	* net/Kconfig and include/nuttx/net/uip/uipopt.h: Add configuration
	  support for forthcoming TCP write buffering (2014-1-13).
	* net/net_send_buffered.c, net_send_unbuffered.c, and
	  uip/uip_tcpwrbuffer.c:  First set of changes to bring in Jason
	  Jiang's TCP write buffering logic.  Still not complete but
	  apparently harmless if not selected. (2014-1-13).
	* All of Jason Jiang's TCP write buffering logic is checked in.
	  Unfortunately, it does not yet work (2013-1-14).
	* configs/px4fmu-v2_upstream:  Configuration for testing simple
	  configurations on the the PX4FMU v2.  This version is incomplete
	  for the PX4 appliation and is not a replacement for the version
	  in the PX4 GIT repository.
	* fs/fat/fs_fat32.c: A correction to FAT cluster allocation from
	  Tridge via Lorenz Meier (2014-1-14).
	* net/net_clone.c:  If CONFIG_NET_TCP_WRITE_BUFFERS is selected,
	  then the socket-related write buffering information must copied
	  with the other cloned socket data (2014-1-14).
	* net/net_close.c:  If CONFIG_NET_TCP_WRITE_BUFFERS is selected,
	  then it is necessary to free the write buffere callback structure
	  when the socket is closed (2014-1-14).
	* fs/fat/fs_fat32.c:  Fix some root directory logic that was
	  conditionally done only for FAT 32.  Apparently this needs to
	  done for all FAT types.  From Tridge via Lorenz Meier
	  (2014-1-14).
