@@ -1,8 +1,7 @@
 /****************************************************************************
  * arch/arm/src/stm32/nuc_irq.c
- * arch/arm/src/chip/nuc_irq.c
  *
- *   Copyright (C) 2009-2013 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2009-2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -258,11 +257,6 @@ void up_irqinitialize(void)
 
 void up_disable_irq(int irq)
 {
-  /* This will be called on each interrupt (via up_maskack_irq()) whether
-   * the interrupt can be disabled or not.  So this assertion is necessarily
-   * lame.
-   */
-
   DEBUGASSERT((unsigned)irq < NR_IRQS);
 
   /* Check for an external interrupt */
@@ -324,16 +318,15 @@ void up_enable_irq(int irq)
 }
 
 /****************************************************************************
- * Name: up_maskack_irq
+ * Name: up_ack_irq
  *
  * Description:
- *   Mask the IRQ and acknowledge it
+ *   Acknowledge the IRQ
  *
  ****************************************************************************/
 
-void up_maskack_irq(int irq)
+void up_ack_irq(int irq)
 {
-  up_disable_irq(irq);
   nuc_clrpend(irq);
 }
 
